[FIX] Navbar y lista de productos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="wrap">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
@@ -91,7 +91,7 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid">
+      <div class="container-fluid mt-3">
         <div class="topnews">
           <div class="container px-4 pt-5 pb-3">
             <p class="h2 text-center">
@@ -402,7 +402,7 @@
         <div class="container">
           <a id="tendency" class="d-inline-flex" href="#">
             <p class="h2 mb-3">
-              <b>Un texto que no se que poner</b>
+              <b>Tendencia</b>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="24"
@@ -415,24 +415,124 @@
               </svg>
             </p>
           </a>
-          <div id="listProducts" class="row d-flex flex-row flex-nowrap overflow-auto">
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
-            <div class="card card-block mx-2">Card</div>
+          <div id="listProducts" class="row d-flex flex-row flex-nowrap overflow-auto text-center">
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/14963/616x353/party-animals-xbox-series-x-s-xbox-one-juego-microsoft-store-cover.jpg?v=1739355922" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Party animals</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>XBOX</small></span>
+                <p class="card-text mt-3"><b>18,00 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/15722/616x353/horizon-call-of-the-mountain-playstation-5-juego-playstation-store-europe-cover.jpg?v=1730296301" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Horizon Call of the Mountain</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <p class="card-text mt-3"><b>69,99 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/5362/616x353/need-for-speed-heat-pc-juego-ea-app-cover.jpg?v=1737537940" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Need for speed Heat</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>XBOX</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/8701/616x353/forza-horizon-5-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg?v=1738767995" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Forza Horizon 5</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>XBOX</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/14461/616x353/super-mario-bros-wonder-switch-juego-nintendo-eshop-europe-cover.jpg?v=1730891119" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Super Mario Bros. Wonder</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>Nintendo</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/13172/616x353/assassin-s-creed-the-ezio-collection-switch-juego-nintendo-eshop-europe-cover.jpg?v=1730889749" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Assassin's Creed The Ezio Collection</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>XBOX</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>Nintendo</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/8701/616x353/forza-horizon-5-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg?v=1738767995" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Forza Horizon 5</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>XBOX</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>Nintendo</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/8701/616x353/forza-horizon-5-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg?v=1738767995" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Forza Horizon 5</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>XBOX</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>Nintendo</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            <div class="card me-4">
+              <img src="https://gaming-cdn.com/images/products/8701/616x353/forza-horizon-5-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg?v=1738767995" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"><strong>Forza Horizon 5</strong></p>
+                <p class="card-text mb-1 text-start ms-4 plataforms"><small>Plataformas:</small></p>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PC</small></span>
+                <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"><small>PS</small></span>
+                <p class="card-text"><b>19,90 €</b></p>
+                <a href="#" class="btn btn-dark rounded-pill w-100">Comprar</a>
+              </div>
+            </div>
+            
           </div>
          
         </div>
-        <div class="container">
+        <div class="container mb-4">
           <div class="row mt-5 d-flex justify-content-center">
             <div class="col-md-6 d-flex justify-content-end">
               <img
-                id="imagenDoge"
-                src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.theconversation.com%2Ffiles%2F38315%2Foriginal%2Fynbbrqbz-1387485698.jpg%3Fixlib%3Drb-1.1.0%26q%3D30%26auto%3Dformat%26w%3D754%26h%3D754%26fit%3Dcrop%26dpr%3D2&f=1&nofb=1&ipt=06b448cc7ead41f076b9e243778479a891e8df9a8ed2028fd4ccc93d4f18b3ce"
+                id="imagenAcordion"
+                src="https://images.samsung.com/is/image/samsung/assets/es/home/08_24/co15_half-teasher-list-2_pc_684x684.jpg?$684_684_JPG$"
                 alt=""
               />
             </div>
