--- a/index.html
+++ b/index.html
@@ -236,9 +236,8 @@
                   class="card-body d-flex flex-column justify-content-end align-items-center"
                 >
                   <h5 class="card-title"><strong>Videojuegos hasta 50% de descuento</strong></h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p class="card-text mt-3">
+                    Ahorra hasta 40€ con ventajas únicas
                   </p>
                   <a href="#" class="btn btn-dark rounded-pill">Comprar</a>
                 </div>
@@ -623,13 +622,8 @@
                     data-bs-parent="#accordionFlush"
                   >
                     <div class="accordion-body">
-                      Placeholder content for this accordion, which is intended
-                      to demonstrate the <code>.accordion-flush</code> class.
-                      This is the third item's accordion body. Nothing more
-                      exciting happening here in terms of content, but just
-                      filling up the space to make it look, at least at first
-                      glance, a bit more representative of how this would look
-                      in a real-world application.
+                      Texto de ejemplo dentro del acordeón. Este es el cuerpo del
+                      tercer acordeón.
                     </div>
                   </div>
                 </div>
@@ -652,13 +646,8 @@
                     data-bs-parent="#accordionFlush"
                   >
                     <div class="accordion-body">
-                      Placeholder content for this accordion, which is intended
-                      to demonstrate the <code>.accordion-flush</code> class.
-                      This is the third item's accordion body. Nothing more
-                      exciting happening here in terms of content, but just
-                      filling up the space to make it look, at least at first
-                      glance, a bit more representative of how this would look
-                      in a real-world application.
+                      Texto de ejemplo dentro del acordeón. Este es el cuerpo del
+                      cuarto acordeon.
                     </div>
                   </div>
                 </div>
