[Fix] js practica

--- a/js.html
+++ b/js.html
@@ -4,29 +4,25 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-  <script type="text/javascript" src="test.js"></script>
-</head>
-<body>
-
-<input name="nombre" type="text" placeholder="Nombre">
-<input name="apellidos" type="text" placeholder="Apellidos">
-<button id="enviar">Enviar</button>
-
-
-
-<table>
-  <thead>
-  <th>Nombre
-  </th>
-  <th>Apellidos</th>
-  </thead>
-  <tbody>
-  <tr>
-    <td>Paco</td>
-    <td>Lopez</td>
-  </tr>
-  </tbody>
-</table>
-
+  </head>
+  <body>
+    <input id="nombre" name="nombre" type="text" placeholder="Nombre">
+    <input id="apellidos" name="apellidos" type="text" placeholder="Apellidos">
+    <button id="enviar">Enviar</button>
+    
+    <table>
+      <thead>
+        <th>Nombre
+        </th>
+        <th>Apellidos</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Paco</td>
+          <td>Lopez</td>
+        </tr>
+      </tbody>
+    </table>
+    <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
